--- a/LekkerLokaalApp/LekkerLokaalApp.iOS/Entitlements.plist
+++ b/LekkerLokaalApp/LekkerLokaalApp.iOS/Entitlements.plist
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-</dict>
+    <dict>
+        <key>NSCameraUsageDescription</key>
+        <string>This app needs to access a camera to scan the barcode.</string>
+    </dict>
 </plist>
-
