Verder gewerkt aan VerificatiePage

--- a/LekkerLokaalApp/LekkerLokaalApp.UWP/LekkerLokaalApp.UWP.csproj
+++ b/LekkerLokaalApp/LekkerLokaalApp.UWP/LekkerLokaalApp.UWP.csproj
@@ -105,6 +105,7 @@
     <None Include="LekkerLokaalApp.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Kruisje.png" />
     <Content Include="LoginIcon.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
@@ -138,6 +139,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="Vinkje.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
