--- a/LekkerLokaalApp/LekkerLokaalApp.iOS/LekkerLokaalApp.iOS.csproj
+++ b/LekkerLokaalApp/LekkerLokaalApp.iOS/LekkerLokaalApp.iOS.csproj
@@ -144,4 +144,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\LoginIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Kruisje.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Vinkje.png" />
+  </ItemGroup>
 </Project>
