--- a/LekkerLokaalApp/LekkerLokaalApp.Android/LekkerLokaalApp.Android.csproj
+++ b/LekkerLokaalApp/LekkerLokaalApp.Android/LekkerLokaalApp.Android.csproj
@@ -101,5 +101,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\LoginIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Kruisje.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Vinkje.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
