--- a/LekkerLokaalApp/LekkerLokaalApp.Android/Properties/AndroidManifest.xml
+++ b/LekkerLokaalApp/LekkerLokaalApp.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,5 @@
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="LekkerLokaalApp.Android"></application>
+	<application android:label="Lekker Lokaal" android:icon="@drawable/LoginIcon"></application>
 </manifest>
